--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,52 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+header {
+    position: fixed;
+    width: 100%;
+    height: 7%;
+    left: 0;
+    top: 0;
+    background-color: blue;
+    color: white;
+    text-align: center;
+  }
+  footer {
+	position: fixed;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+    height: 6%;
+	background-color: blue;
+	color: white;
+	text-align: center;
+    margin-top: 0px;
+}
+body {
+	width: 100%;
+	left: 0;
+	bottom: 0;
+    margin: 150px;
+    height: 100%;
+	text-align: left;
+}
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
