--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,14 @@
 
   <body>
   <header>
-    <p>FaceBook Clone App</p>
+    <p>instgram Clone App</p>
   </header>
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
     <% if logged_in? %>
       <%= link_to "Profile", user_path(current_user.id) %>
+      <%= link_to "Settings", edit_user_path(current_user) %>
       <%= link_to "Logout", session_path(current_user.id), method: :delete %>
     <% else %>
       <%= link_to "Sign up", new_user_path %>
