--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,16 @@
-<%= form_with(model: @user, local: true) do |f| %>
+<%= form_with(model: @user, local: true,url: choose_new_or_edit ) do |f| %>
   <%= render 'shared/error_messages', object: @user %>
-
   <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
+  <%= f.text_field :name %>
 
   <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control' %>
+  <%= f.email_field :email %>
 
   <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %>
+  <%= f.password_field :password %>
 
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class: 'form-control' %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.submit "Create my account" %>
 
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
