--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,5 +18,7 @@
   <%= f.password_field :password %>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+  <%= f.label :photo %>
+  <%= f.file_field :photo %>
   <%= f.submit "Create my account" %>
 <% end %>
