--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,7 @@
 </div>
 <%= link_to "ブログ新規作成画面へ", blogs_path%>
 <%= link_to 'ブログ一覧へ', blogs_path%>
+<%= link_to 'お気に入り一覧', favorites_path %>
 <% if current_user.id == @user.id %>
 <%= link_to 'プロフィールを編集', edit_user_path(@user) %>
 <% else %>
